learned to graph

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,13 @@ div.transbox {
   /* filter: alpha(opacity=100); /* For IE8 and earlier */ */
 }
 
+div.bar {
+    display: inline-block;
+    width: 20px;
+    height: 75px;   /* We'll override this later */
+    background-color: teal;
+}
+
 div.transbox p {
   text-align: center;
   margin: 5%;
