--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ p {
 div.transbox {
   margin: auto;
   width: 50%;
-  background-color: black;
+  background-color: white;
   border: 1px solid black;
   opacity: 0.9;
   /* filter: alpha(opacity=100); /* For IE8 and earlier */ */
