finally. got a line through a circle

--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,8 @@ svg {
   stroke: red;
 }
 
-.circle {
-  radius: 20px;
+circle {
   color: red;
-  x_axis: 30px;
-  y_axis: 30px;
-
-
 }
 
 line {
