--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,7 @@ div.transbox {
   margin: auto;
   width: 50%;
   background-color: white;
-  border: 1px solid black;
-  opacity: 0.9;
+  opacity: 0.1;
   /* filter: alpha(opacity=100); /* For IE8 and earlier */ */
 }
 
@@ -40,6 +39,8 @@ svg {
 } */
 
 line {
+  display: block;
+  margin: 0 auto;
   stroke: red;
   stroke-width: 2;
 }
